[metadata]
name = trackrequests
version = 0.1.0
url = https://github.com/simonrw/trackrequests
author = Simon Walker
author_email = simon.walker@localstack.cloud
description = Record AWS requests
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=1.0

[options.entry_points]
localstack.extensions =
    trackrequests = trackrequests.extension:MyExtension
